# ONITRO

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  README.md
docs/: api_conventions.md  architecture.md
examples/: CMakeLists.txt  README.md
reference/: README.md  requirements.txt
reference/Pyvollib/MODULE_1/: 25-06-2025-TO-25-06-2026-ICICIBANK-EQ-N.csv  25-06-2025-TO-25-06-2026-TCS-EQ-N.csv  config.py  data_loader.py  expiry.py  main.py  onitro_icici_options.csv  onitro_tcs_options.csv  option-chain-ED-ICICIBANK-30-Jun-2026.csv  option-chain-ED-TCS-30-Jun-2026.csv  pipeline.py  pricing.py  volatility.py
reference/Pyvollib/Module-2/: Batch_processor.py  NSE_cleaner.py
reference/Pyvollib/Module-2/Data/: option-chain-ED-ICICIBANK-28-Jul-2026.csv  option-chain-ED-TCS-28-Jul-2026.csv  pyvollib_results_icicibank.csv  pyvollib_results_tcs.csv
reference/Quantlib/MODULE_6/: EWMAStats.hpp  NIFTY.csv  README.md  RollingStats.hpp  TCS.csv  main  main.cpp  module_6_correlation.cpp  module_6_correlation.hpp  output.csv
reference/Quantlib/Module-1/: CMakeLists.txt  module_1_greeks_solver.cpp  module_1_greeks_solver.hpp  module_1_integrated_example.cpp  option_validator.py  requirements.txt  tcs_greeks_output.csv
reference/Quantlib/Module-3/: CMakeLists.txt  NSE_DATA_COLLECTOR_GUIDE.md  README.md  data_collector.py  module3_analysis.json  module_3_bonds.cpp  module_3_bonds.hpp  module_3_forwards_futures.cpp  module_3_forwards_futures.hpp  module_3_integrated_example.cpp  module_3_ytm_solver.cpp  module_3_ytm_solver.hpp  quick_start_examples.cpp  requirements.txt
reference/Quantlib/module 2/: CMakeLists.txt
reference/Quantlib/module 2/data/: options_icicibank.csv  options_tcs.csv  options_tcs_iv.csv
reference/Quantlib/module 2/src/: impliedvolatility.cpp
tests/: CMakeLists.txt
