# examples/CMakeLists.txt
#
# Each example is a small standalone program linked against onitro::onitro,
# showing real end-to-end usage. Add one per example, e.g.:
#
#   add_executable(price_a_chain price_a_chain.cpp)
#   target_link_libraries(price_a_chain PRIVATE onitro::onitro)
#
# Empty until the library has usable APIs.
